# Pi-File-Server

./: .gitignore  CMakeLists.txt  IssuesToFix  New_IPC_Plan  New_IPC_Plan.md  README.md  UseForDebug.cpp  UseForDebugging.cpp  serverPlans
Commands/: FAKE.cpp  FAKE.hpp  Include_Parent_Dir  echo.cpp  echo.hpp  pwd.cpp  pwd.hpp
ForDebugging/: UsefulForDebug
Pi-File-Server/: AbstractCommand.cpp  AbstractCommand.hpp  CHException.cpp  CHException.hpp  CMakeLists.txt  Cmd.cpp  Cmd.hpp  CommandHandler.cpp  CommandHandler.hpp  FileHandler.cpp  FileHandler.hpp  PipePacket.cpp  PipePacket.hpp  SafeFile.cpp  SafeFile.hpp  Server.cpp  Server.hpp  Synchronized.cpp  Synchronized.hpp  main.cpp  main.hpp
TODO/: New_IPC_Plan.md  To_Change  To_Change.md  ipSet.cpp  serverPlans  serverPlans.md
